tag: 0.2.1. Removed old files. Added 1 files.

--- a/3829-h/3829-h.htm
+++ b/3829-h/3829-h.htm
@@ -7147,7 +7147,7 @@ you went away just as I got into form."
 </P>
 
 <P>
-"I'm very sorry, but I couldn't know, could I? I though you always
+"I'm very sorry, but I couldn't know, could I? I thought you always
 played like that."
 </P>
 
